# Rag_Crewai

./: README.md
rag_crew/: README.md  pyproject.toml  requirements.txt  summary.md
rag_crew/db/: chroma.sqlite3
rag_crew/src/rag_crew/: crew.py  main.py
rag_crew/src/rag_crew/config/: agents.yaml  tasks.yaml
